# spruce.fun

./: .gitignore  README.md
.github/workflows/: claude-code-review.yml  test.yml
backend/: README.md  loadEnv.js  package-lock.json  package.json  server.js
backend/config/: marketConfig.js
backend/migrations/: 001_session_keys.sql  001_yellow_session_keys.sql  002_add_session_private_key.sql  003_beta_access_codes.sql  README.md
backend/scripts/: fetch_fed_chair_orderbook.js
backend/services/: broadcastService.js  candleService.js  datetimeService.js  db.js  initService.js  marketDataService.js  orderbookService.js  polymarketApiService.js  polymarketWsService.js  state.js
contracts/: foundry.toml
contracts/script/: Deploy.s.sol
contracts/solana/clob/: .gitignore  Anchor.toml  Cargo.toml  README.md  package-lock.json  package.json
contracts/src/: OnChainOrderBook.sol
frontend/: .gitignore  fetchPolymarketMarket.js  next.config.ts  package-lock.json  package.json  polymarket.js  restart.sh
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/clob/: page.tsx
frontend/app/components/: BetaGate.tsx  CLOBOrderBook.tsx  CLOBOrdersAndTrades.tsx  CLOBTestOrders.tsx  CLOBTradingPanel.tsx  Header.tsx  (+13 more)
frontend/lib/: clob.ts  constants.ts  empty-module.js  marketConfig.ts  polymarketApi.ts
frontend/scripts/: initialize-all-orderbooks.ts
risk_engine/: Cargo.toml  schema.sql
risk_engine/src/: config.rs  db.rs  errors.rs  handlers.rs  insurance.rs  leverage.rs  liquidation.rs  main.rs  margin.rs  monitor.rs  positions.rs  price_feed.rs  types.rs
(+15 files in other folders)
